--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
 runtime: nodejs10
 
 env_variables:
-  CLOUD_INSTANCE: fake-instance
+  CLOUD_INSTANCE: abstract-lane-287121:us-central1:first-instance
